...
        android:textSize="24sp"
        android:textColor="@color/black"
        android:padding="8dp"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/itemQuantityText"
        android:hint="@string/new_quantity"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/editButton"
        android:text="@string/edit_ingredient"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

    <TextView
...
